objects/ssot__Quote__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerAccountId__c</fullName>
        <label>Customer Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Quote Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteOwnerUserId__c</fullName>
        <label>Quote Owner User</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteStatusCategory__c</fullName>
        <label>Quote Status Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quote_QuoteOwnerUserId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote_QuoteOwnerUserId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Quote_QuoteOwnerUserId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Quote_QuoteOwnerUserId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718543597540_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote_CustomerAccountId_map_Account__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Quote_CustomerAccountId_map_Account__rel</relationshipLabel>
        <relationshipName>rel_1718543597540_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>